# otel-example

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/functions/consumer_newrelic/: __init__.py  handler.py  requirements.txt
backend/functions/consumer_s3/: __init__.py  handler.py  requirements.txt
backend/functions/order_service/: __init__.py  handler.py
backend/functions/user_actions/: __init__.py  handler.py  requirements.txt
backend/shared/: __init__.py  models.py  schemas.py
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/dev/: terraform.tfvars  terraform.tfvars.example
infra/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/modules/kinesis/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/otel-layer/: main.tf  outputs.tf
infra/modules/runtime-layer/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
layers/otel-common/: requirements.txt
layers/otel-common/python/otel_common/: __init__.py  attributes.py  exporters.py  telemetry.py
layers/runtime-deps/: requirements.txt
scripts/: deploy.sh  destroy.sh  setup-newrelic.sh
simulator/: package-lock.json  package.json
simulator/src/: api.ts  index.ts
simulator/src/scenarios/: index.ts
simulator/src/telemetry/: index.ts
simulator/src/types/: index.ts
